0.2.6 / Fixed window overflow

--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,7 @@ body {
     height: 100dvh;
     flex-direction: column;
     background-color: black;
+    overflow: hidden;
 }
 
 #debug {
